update: 1. Use MyConfig class(singelton pattern) to initial/fetch config; 2. Migrate project apis.

--- a/apps/templates/job.html
+++ b/apps/templates/job.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
   {% block script %}
-  <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/static/js/project.js"></script>
   <script src="/static/js/opensource/echarts.js"></script>
+  <script src="/static/js/opensource/bootstrap.min.js"></script>
   <link rel="stylesheet" href="/static/css/job.css">
   {% endblock %}
 
