--- a/apps/templates/register.html
+++ b/apps/templates/register.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>QAA|Login</title>
+	<title>QAA|Register</title>
 </head>
 <body>
 	<style type="text/css">
@@ -45,10 +45,14 @@
 
 	<div class="container">
 		<div class="header">
-			QA Admin | Login
+			QA Admin | Register
 		</div>
 		<div class="content">
-			<form method="post" action="{{ url_for('main.login', next=request.args.get('next')) }}">
+			<form method="post" action="{{ url_for('main.register') }}">
+				<div class="box">
+					<label>SecretKey：</label>
+					<input type="text" name="secret_key"/>
+				</div>
 				<div class="box">
 					<label>用户名：</label>
 					<input type="text" name="username"/>
@@ -69,7 +73,7 @@
 				{% endwith %}
 				</div>
 				<div class="box">
-					<button id="submit_button">登录</button>
+					<button id="submit_button">注册</button>
 				</div>
 			</form>
 		</div>
